 single_chip_common_system.cpp Locally Modified           33 
 single_chip_clockserver_system.awb Locally Modified           33 
 single_chip_common_system.h Locally Modified           33 
 single_chip_common_system.awb Locally Modified           33 

Directory modules/system/ape_system
 ape.cpp                   Locally Modified           33 
 ape.h                     Locally Modified           33 
 ape.awb                   Locally Modified           33 

Directory modules/system/system_minimal
 system_mini.cpp           Locally Modified           33 
 system_mini.h             Locally Modified           33 
 system_mini.awb           Locally Modified           33 

Directory modules/system
 multi_chip_common_system.cpp Locally Modified           33 
 single_chip_clockserver_system.cpp Locally Modified           33 

Partially updating with simcore changes (rev. 2249)

Restructure SMP thread model to support global management of threads within
the simulator. Major changes include:

- Number of threads is no longer an argument to make. It is a property of
the model, stored in parameters in the system module.
- SMP class now has a number of static methods for managing threads.
The system calls the SMP initialization method.
- Cleaned up the threading interface to the clock server. Threads are no
named as objects instead of integers.
- The clock server calls SMP to start threads. All thread global IDs are
assigned by the SMP class.
- Updated atomic for better performance on 64 bit machines.
- Added compare and exchange functions to atomic.h

Note: no parallel models tested yet. This is all infrastructure change.

----------
spartha1    Date: Wed Mar 14 00:59:27 EDT 2007  CSN: CSN-asimcore-35
                  Wed Mar 14 04:59:27 UTC 2007


Directory lib/libasim/include/asim
 syntax.h                  Locally Modified           34 

Updating with simcore changes (rev. 2250)

Only include cctype on C++ compilations.