@@ -27,3 +27,4 @@ CSN-asimcore-32
 CSN-asimcore-33
 CSN-asimcore-34
 CSN-asimcore-35
+CSN-asimcore-36
